[tool.poetry]
name = "portfolio-selection"
version = "0.1.0"
description = "Implementation of some portfolio selection models as well as tools to backtest them and visualize allocations"
authors = ["Ale-Cas <castricaalessio@gmail.com>"]
packages = [
    { include = "source_code" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
