[tool.poetry]
name = "py-quant-fin"
version = "0.1.0"
description = "py-quant-fin is an open-source library which focuses on quantitative finance."
license = "Apache License"
authors = ["Ale-Cas <castricaalessio@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Ale-Cas/py-quant-fin"
keywords= ["finance", "portfolio", "optimization", "quant", "investing"]
packages = [
    { include = "quantfin" },
]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
pandas = "^1.3.5"
yfinance = "^0.1.68"
streamlit = "^1.3.1"
cvxopt = "^1.2.7"
matplotlib = "^3.5.1"
plotly = "^5.5.0"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
poetry = "^1.1.12"
pytest = "^6.2.5"
mypy = "^0.930"
isort = "^5.10.1"
black = "^21.12b0"
pylint = "^2.12.2"
ipython = "^7.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "quantfin"
ignore_missing_imports = true

[tool.pylint.messages_control]

max-line-length = 100

disable = [
  "trailing-whitespace",
  "too-many-arguments",
  "too-few-public-methods",
]